# openbookfs

./: CMakeLists.txt  bootstrap_d.sh  bootstrap_r.sh  doxy.config.in  doxystyle.css  readme.md
cmake/Modules/: FindBoost.cmake  FindCrypto++.cmake  FindFuse.cmake  FindProtobuf.cmake  FindRE2.cmake  FindTclap.cmake  FindYamlCpp.cmake
docs/final/: 824_final_report.aux  824_final_report.tex
docs/pages/: mainpage.h
docs/proposal/: .gitignore
docs/proposal/src/: Bialkowski.ea.obfsProposal.tex
scripts/: message_map.pl
src/: Bytes.h  CMakeLists.txt  ExceptionStream.h  FdSet.cpp  FdSet.h  FileDescriptor.cpp  FileDescriptor.h  Job.cpp  Job.h  JobHandler.cpp  JobHandler.h  JobSink.h  LockFreeQueue.hpp  Marshall.cpp  Marshall.h  MessageBuffer.cpp  MessageBuffer.h  NotifyPipe.cpp  NotifyPipe.h  OpenbookFS.cpp  OpenbookFS.h  Pool.h  PriorityQueue.h  Queue.h  ReferenceCounted.h  SelectSet.cpp  SelectSet.h  SelectSpec.cpp  SelectSpec.h  Synchronized.h  TimeSpec.cpp  TimeSpec.h  TimeVal.cpp  TimeVal.h  base64.cpp  base64.h  jobs.h  main.cpp  messages.cpp  messages.h  (+3 more)
src/backend/: Backend.cpp  Backend.h  CMakeLists.txt  Configuration.cpp  Configuration.h  Connection.cpp  Connection.h  ConnectionPool.h  Database.cpp  Database.h  FileContext.cpp  FileContext.h  FileDescriptor.cpp  FileDescriptor.h  FuseContext.cpp  FuseContext.h  KVStore.h  LongJob.cpp  LongJob.h  Marshall.cpp  Marshall.h  MessageHandler.cpp  MessageHandler.h  MetaFile.cpp  MetaFile.h  MountPoint.cpp  MountPoint.h  SocketListener.cpp  SocketListener.h  VersionVector.cpp  VersionVector.h  config.yaml  fuse_include.h  fuse_operations.cpp  fuse_operations.h  global.h  main.cpp
src/client_fs/: CMakeLists.txt  Client.cpp  Client.h  ClientJob.cpp  ClientJob.h  ExtendedAttributes.cpp  ExtendedAttributes.h  FileDescriptor.cpp  FileDescriptor.h  MessageHandler.cpp  MessageHandler.h  MetaFile.cpp  MetaFile.h  OpenbookFS.cpp  OpenbookFS.h  OutputChannel.cpp  OutputChannel.h  ServerHandler.cpp  ServerHandler.h  fuse_include.h  fuse_operations.cpp  fuse_operations.h  global.h  main.cpp  openbookfs_c.yaml  protocol_test.cpp  singleton.cpp
src/client_fs/jobs/: FileModified.cpp  FileModified.h
src/clui/: CMakeLists.txt  ConnectOptions.h  DataDirOptions.h  DisplayNameOptions.h  ListKnownClientOptions.h  ListMountPointOptions.h  LoadConfigOptions.h  MaxConnectionsOptions.h  Options.cpp  Options.h  RemoteSocketOptions.h  connection.cpp  connection.h  global.h  main.cpp
src/clui/commands/: Checkout.cpp  Checkout.h  ClientSocketOptions.h  Connect.cpp  Connect.h  DisplayNameOptions.h  ListKnownClientOptions.h  ListKnownPeers.cpp  ListKnownPeers.h  ListMountPointOptions.h  ListMounts.cpp  ListMounts.h  LoadConfig.cpp  LoadConfig.h  LocalSocketOptions.h  Release.cpp  Release.h  SaveConfig.cpp  SaveConfig.h  SaveConfigOptions.h  SetClientSocket.cpp  SetClientSocket.h  SetDataDir.h  SetDisplayName.cpp  SetDisplayName.h  SetLocalSocket.cpp  SetLocalSocket.h  SetRemoteSocket.cpp  SetRemoteSocket.h  StartSync.cpp  StartSync.h  UnmountOptions.h
src/gui/: .gitignore  CMakeLists.txt  Makefile  OpenFSUI  OpenFSUI.pro  Options.cpp  Options.h  connection.cpp  connection.h  connectiondialog.cpp  connectiondialog.h  global.h  info.cpp  info.h  localclient.cpp  localclient.h  localclient.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  ui_localclient.h  ui_mainwindow.h
src/gui/OpenFSUI.app/Contents/: Info.plist
src/gui/OpenFSUI.app/Contents/MacOS/: OpenFSUI
src/gui/commands/: .ListKnownPeers.cpp.swp  .ListMounts.cpp.swp  Checkout.cpp  Checkout.h  Connect.cpp  Connect.h  ListKnownPeers.cpp  ListKnownPeers.h  ListMounts.cpp  ListMounts.h  LoadConfig.cpp  LoadConfig.h  MaxConnectionsOptions.h  Release.cpp  Release.h  SaveConfig.cpp  SaveConfig.h  SetClientSocket.cpp  SetClientSocket.h  SetDataDir.cpp  SetDataDir.h  SetDisplayName.cpp  SetDisplayName.h  SetLocalSocket.cpp  SetLocalSocket.h  SetRemoteSocket.cpp  SetRemoteSocket.h  StartSync.cpp  StartSync.h  UnmountOptions.h
src/jobs/: NewVersion.h  PingJob.h  QuitShouter.h  QuitWorker.h  SendFile.cpp  SendFile.h  SendTree.cpp  SendTree.h
src/msg_gen/: MessageHandler.inc  MessageId.h  MessageMap.h  MessageStr.cpp  MessageStr.h  README
src/server/: CMakeLists.txt  Client.cpp  Client.h  ClientHandler.cpp  ClientHandler.h  ClientMap.h  ClientMessage.cpp  ClientMessage.h  Handler.cpp  Handler.h  Job.cpp  Job.h  JobHandler.cpp  JobHandler.h  MessageHandler.cpp  MessageHandler.h  MetaFile.cpp  MetaFile.h  Pool.h  Protocol.cpp  Protocol.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  global.h  jobs.cpp  jobs.h  main.cpp  openbookfs_d.yaml
src/server/jobs/: NewVersion.cpp  NewVersion.h  QuitShouter.h
test/: CMakeLists.txt  diffie_hellman_test.cpp
test/backend/a/: obfs.yaml
test/backend/b/: obfs.yaml  start.sh
test/diffie_hellman/: CMakeLists.txt  diffie_hellman_test.cpp
